--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,14 +16,14 @@
     <title>WeApprove</title>
 </head>
 <body class="">
-    <!-- navbar -->
-    <div class="navigation">
+     <!-- navbar -->
+     <div class="navigation">
         <img src="../assets/WeApprove black.png" alt="" class="indexNavigationLogo nav-logo">
         <div class="indexnavigationItemsDiv w-[50%] ">
             <a href="#" class="indexnavigationitem ">Home</a>
-            <a href="" class="indexnavigationitem">Features</a>
-            <a href="" class="indexnavigationitem">Pricing</a>
-            <a href="" class="indexnavigationitem">Testimonials</a>
+            <a href="#features" class="indexnavigationitem">Features</a>
+            <a href="#pricing" class="indexnavigationitem">Pricing</a>
+            <a href="#Testimonal" class="indexnavigationitem">Testimonials</a>
             <a href="../html/login.html" class="indexPortalLogin">Portal Login</a>
         </div>
     </div>
@@ -44,8 +45,8 @@
     </div>
 
     <!-- Features -->
-    <div class="indexFeatures">
-        <h3 class="bestFeatures">WeApprove provides you with the best Features</h3>
+    <div id="features" class="indexFeatures">
+       <h3 class="bestFeatures">WeApprove provides you with the best Features</h3>
         <p class="discovermore">Discover more of what WeApprove can do for your organization</p>
         <div class="featurecarddiv">
             <div class="feature-card">
@@ -72,7 +73,7 @@
     </div>
 
     <!-- about -->
-    <div class="aboutWeapproveDiv">
+    <div id="Testimonal"class="aboutWeapproveDiv">
         <div class="aboutWeapproveImgDiv">
             <img src="../assets/pexels-pavel-danilyuk-7518972.jpg" alt="">
         </div>
@@ -111,7 +112,7 @@
     </div>
 
     <!-- pricing -->
-    <div class="pricingdiv">
+    <div id="pricing" class="pricingdiv">
         <h3 class="chooseaplanheading">Choose Pricing Plans Suits
             You</h3>
         <div class="plansDiv">
